Revert to keep Java 11 compatibility