@@ -11,6 +11,7 @@ import java.nio.file.attribute.FileTime;
 import java.util.Comparator;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -41,7 +42,7 @@ public class FileLister {
                         filesCounter.incrementAndGet();
                         return each;
                     })
-                    .toList();
+                    .collect(Collectors.toList());
 
             LOGGER.info("Loaded {} files from directory {}", filesCounter.get(), directory);
         } catch (IOException e) {
